copy button alignment css fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,7 +313,7 @@ h6 {
   text-transform: capitalize;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 4px 32px 10px 32px;
+  padding: 7px 32px 10px 32px;
   border-radius: 2px;
   transition: 0.5s;
   color: #25282D;
